--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <body>
     <div class="bg-red-700 mx-auto text-center py-2">
       <h1 class="text-xl text-white font-bold mx-4 sm:mx-0">
-        Breaking: Millions of Seniors On Medicare Are Upgrading Their Plans To
-        Claim A $2,500 Spending Card!
+        Seniors On Medicare Can Get Hundreds In Savings. Tap Below To Qualify!
       </h1>
     </div>
     <div
