Make part of the headline text bold

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <body>
     <div class="bg-red-700 mx-auto text-center py-2">
       <h1 class="text-xl text-white font-bold mx-4 sm:mx-0">
-        Seniors On Medicare Can Get Hundreds In Savings. Tap Below To Qualify!
+        Seniors On Medicare Can Get Hundreds In Savings.
+        <strong>Tap Below To Qualify</strong>!
       </h1>
     </div>
     <div
