--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
       </h1>
       <img class="mx-auto my-2 w-full md:w-3/4" src="assets/images/hero.jpg" />
       <p class="my-3 md:text-xl" style="text-align: left">
-        Seniors in America are rushing to upgrade their 2024 Medicare plan to
-        claim a $2,500 spending card. They are using this card to pay for their
-        items at <strong> thousands of stores across the nation</strong>.
+        Many elderly Americans are quickly updating their 2024 Medicare plans to
+        obtain a $2,500 spending card. This card allows them to
+        <strong>purchase goods at numerous stores</strong> nationwide.
       </p>
       <p class="my-3 md:text-xl" style="text-align: left">
-        Most seniors are going to miss the chance to claim their card because
-        the time to register is ending soon. Check if you are eligible before
-        time runs out by answering 2 questions below.
+        Unfortunately, a large number of seniors might lose the opportunity to
+        secure this card as the registration period is drawing to a close.
+        Ensure you're eligible by responding to two questions
+        <strong>below before it's too late.</strong>
       </p>
       <div>
         <div id="display1" class="md:mt-8 mt-4">
