Add new button to question 1

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
           </h3>
           <div class="grid grid-cols-1 gap-6">
             <button
+              id="btn-under-61"
+              class="flex justify-center bg-green-500 hover:bg-green-500 tracking-wide text-white font-bold rounded-2xl w-3/4 mx-auto border-b-2 border-green-500 uppercase shadow-md md:py-6 py-4 md:text-2xl px-6 items-center"
+            >
+              Under 64
+            </button>
+            <button
               id="btn-1"
               class="flex justify-center bg-green-500 hover:bg-green-500 tracking-wide text-white font-bold rounded-2xl w-3/4 mx-auto border-b-2 border-green-500 uppercase shadow-md md:py-6 py-4 md:text-2xl px-6 items-center"
             >
