Change text and color in congratulations page

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div
         class="p-6 border-t-2 border-blue-500 mt-4 bg-gray-300 text-center shadow-xl"
       >
-        <h3 class="text-xl md:text-2xl font-bold text-green-500 mb-4">
+        <h3 class="text-xl md:text-2xl font-bold text-blue-500 mb-4">
           Congratulations!
         </h3>
         <p class="text-xl md:text-2xl font-bold mb-4">
@@ -116,7 +116,8 @@
           <span class="text-red-600">The Healthy Allowance Card!</span>
         </p>
         <p class="">
-          Tap below to speak to an official agent to claim your benefit card!
+          Don't miss out - Speak to an official agent to claim your benefit card
+          now.
         </p>
         <a href="tel:<?php echo $ringbaNumberPrimaryTel; ?>">
           <button
